--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,10 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# GitHub recommends pinning actions to a commit SHA.
-# To get a newer version, you will need to update the SHA.
-# You can also reference a tag or branch, but the action may change without warning.
-
 name: Publish Docker image
 
 on:
   workflow_dispatch:
     inputs:
       version:
-        required: true
+        required: false
         type: string
         description: "Version"
   release: 
@@ -28,6 +19,10 @@ jobs:
       contents: read
       attestations: write
       id-token: write
+    env:
+      REPOSITORY: ${{ secrets.DOCKERHUB_USERNAME }}/test
+      PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
@@ -48,22 +43,38 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: klaspihl/test
+          images: ${{ env.REPOSITORY }}
+
+      - name: Determine version
+        id: determine_version
+        run: |
+          if [ -z "${{ github.event.inputs.version }}" ]; then
+            year=$(date +'%y')
+            month=$(date +'%m')
+            number=$(git tag --list "${year}.${month}.*" | wc -l)
+            number=$((number + 1))
+            version="${year}.${month}.${number}"
+          else
+            version="${{ github.event.inputs.version }}"
+          fi
+          echo "version=$version" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@v6
         with:
-          context: "{{defaultContext}}:node-red"
-          platforms: linux/amd64 #,linux/arm64
-          file: dockerfile
+          context: .
+          platforms: ${{ env.PLATFORMS }}
+          file: Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ env.REPOSITORY }}:${{ env.version }}
+            ${{ env.REPOSITORY }}:latest
           labels: ${{ steps.meta.outputs.labels }}
 
       #- name: Generate artifact attestation
       #  uses: actions/attest-build-provenance@v2
       #  with:
-      #    subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+      #    subject-name: ${{ env.REPOSITORY }}
       #    subject-digest: ${{ steps.push.outputs.digest }}
       #    push-to-registry: false
