--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       id-token: write
     env:
       REPOSITORY: ${{ secrets.DOCKERHUB_USERNAME }}/test
-      PLATFORMS: linux/amd64,linux/arm64 #,linux/arm/v7
+      PLATFORMS: linux/amd64,linux/arm64 ,linux/arm/v7
 
     steps:
       - name: Check out the repo
