--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       attestations: write
       id-token: write
     env:
-      REPOSITORY: ${{ secrets.DOCKERHUB_USERNAME }}/test
+      REPOSITORY: ${{ secrets.DOCKERHUB_USERNAME }}/${{ variables.DOCKERHUB_REPO }}
       PLATFORMS: linux/amd64,linux/arm64 ,linux/arm/v7
 
     steps:
@@ -71,10 +71,3 @@ jobs:
             ${{ env.REPOSITORY }}:${{ env.version }}
             ${{ env.REPOSITORY }}:latest
           labels: ${{ steps.meta.outputs.labels }}
-
-      #- name: Generate artifact attestation
-      #  uses: actions/attest-build-provenance@v2
-      #  with:
-      #    subject-name: ${{ env.REPOSITORY }}
-      #    subject-digest: ${{ steps.push.outputs.digest }}
-      #    push-to-registry: false
